--- a/css/styles.css
+++ b/css/styles.css
@@ -571,6 +571,22 @@ h1 {
     max-width: 100%;
     border-radius: 12px;
 }
+footer {
+    background: #031A39;
+    justify-content: center;
+}
+.footer-links {
+    align-items: center;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.4;
+    text-align: center;
+    list-style: none;
+}
+
 
 
 
